--- a/wxpay-v3-block/build.gradle
+++ b/wxpay-v3-block/build.gradle
@@ -13,5 +13,5 @@ repositories {
 
 dependencies {
     implementation project(':wxpay-v3-commons')
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
