--- a/wxpay-v3-commons/build.gradle
+++ b/wxpay-v3-commons/build.gradle
@@ -11,7 +11,14 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    gson_version = "2.8.6"
+    junit_version = "4.12"
+    slf4j_version = "1.7.30"
+}
+
 dependencies {
-    implementation "com.google.code.gson:gson:2.8.6"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "org.slf4j:slf4j-api:$slf4j_version"
+    testImplementation "junit:junit:$junit_version"
 }
