--- a/wxpay-v3-reactor/build.gradle
+++ b/wxpay-v3-reactor/build.gradle
@@ -10,10 +10,16 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+ext {
+    junit_version = "4.12"
+    slf4j_version = "1.7.30"
+    gson_version = "2.8.6"
+    reactor_core_version = "3.3.6.RELEASE"
+}
 
 dependencies {
     implementation project(':wxpay-v3-commons')
-    implementation "io.projectreactor:reactor-core:3.3.6.RELEASE"
+    implementation "io.projectreactor:reactor-core:$reactor_core_version"
     
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
