--- a/wxpay-v3-webflux/build.gradle
+++ b/wxpay-v3-webflux/build.gradle
@@ -10,11 +10,18 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+ext {
+    junit_version = "4.12"
+    slf4j_version = "1.7.30"
+    gson_version = "2.8.6"
+}
 
 dependencies {
     implementation project(':wxpay-v3-commons')
     implementation project(':wxpay-v3-reactor')
-    implementation "com.google.code.gson:gson:2.8.6"
-    implementation "org.springframework:spring-webflux:5.2.7.RELEASE"
+    implementation "org.slf4j:slf4j-api:$slf4j_version"
+    implementation "com.google.code.gson:gson:$gson_version"
 
+    implementation "org.springframework:spring-webflux:5.2.7.RELEASE"
+    testImplementation "junit:junit:$junit_version"
 }
