--- a/wxpay-v3-reactor/build.gradle
+++ b/wxpay-v3-reactor/build.gradle
@@ -18,7 +18,7 @@ ext {
 }
 
 dependencies {
-    implementation project(':wxpay-v3-commons')
+    api project(':wxpay-v3-commons')
     implementation "io.projectreactor:reactor-core:$reactor_core_version"
     
     testImplementation group: 'junit', name: 'junit', version: '4.12'
