--- a/wxpay-v3-webflux/build.gradle
+++ b/wxpay-v3-webflux/build.gradle
@@ -17,7 +17,7 @@ ext {
 }
 
 dependencies {
-    implementation project(':wxpay-v3-commons')
+//    implementation project(':wxpay-v3-commons')
     implementation project(':wxpay-v3-reactor')
     
     implementation "org.slf4j:slf4j-api:$slf4j_version"
