--- a/wxpay-v3-block/build.gradle
+++ b/wxpay-v3-block/build.gradle
@@ -12,6 +12,6 @@ repositories {
 }
 
 dependencies {
-    api project(':wxpay-v3-commons')
+    implementation project(':wxpay-v3-commons')
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
