--- a/wxpay-v3-webflux/build.gradle
+++ b/wxpay-v3-webflux/build.gradle
@@ -12,13 +12,15 @@ repositories {
 }
 ext {
     junit_version = "4.12"
-    slf4j_version = "1.7.30"
+    logback_version = "1.2.3"
     gson_version = "2.8.6"
 }
 
 dependencies {
+    implementation project(':wxpay-v3-commons')
     implementation project(':wxpay-v3-reactor')
-    implementation "org.slf4j:slf4j-api:$slf4j_version"
+
+    implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "com.google.code.gson:gson:$gson_version"
 
     implementation "org.springframework:spring-webflux:5.2.7.RELEASE"
