--- a/wxpay-v3-apache-httpclient/build.gradle
+++ b/wxpay-v3-apache-httpclient/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'com.jk.wxpay'
@@ -8,20 +9,28 @@ version '0.0.1'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+    maven {
+        url "http://nexus.jikeyiyong.com/repository/maven-public/"
+        credentials {
+            username "jk-maven-caller"
+            password "20200223maven"
+        }
+    }
 }
 
 ext {
     junit_version = "4.12"
     httpclient_version = "4.5.12"
     logback_version = "1.2.3"
+    sdk_commons_block_verison = "0.0.2"
 }
 
 dependencies {
 
     implementation project(':wxpay-v3-commons')
     implementation project(':wxpay-v3-block')
-
+    implementation "com.jk.sdk:sdk-commons-block:$sdk_commons_block_verison"
     implementation "org.apache.httpcomponents:httpclient:$httpclient_version"
     implementation "org.apache.httpcomponents:httpmime:$httpclient_version"
 
@@ -29,4 +38,32 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
 
     testImplementation "junit:junit:$junit_version"
+}
+
+// 上传source
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier = 'sources'
+}
+
+//上传至nexus
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId project.group
+            artifactId project.name
+            version project.version
+            from components.java
+            artifact  sourcesJar
+        }
+    }
+    repositories {
+        maven {
+            url "http://nexus.jikeyiyong.com/repository/maven-releases/"
+            credentials {
+                username "maven-uploader"
+                password "jkmavenuploader"
+            }
+        }
+    }
 }
