--- a/wxpay-v3-commons/build.gradle
+++ b/wxpay-v3-commons/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'com.jk.wxpay'
@@ -8,7 +9,14 @@ version '0.0.1'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+    maven {
+        url "http://nexus.jikeyiyong.com/repository/maven-public/"
+        credentials {
+            username "jk-maven-caller"
+            password "20200223maven"
+        }
+    }
 }
 
 ext {
@@ -21,4 +29,32 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "com.google.code.gson:gson:$gson_version"
     testImplementation "junit:junit:$junit_version"
+}
+
+// 上传source
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier = 'sources'
+}
+
+//上传至nexus
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId project.group
+            artifactId project.name
+            version project.version
+            from components.java
+            artifact  sourcesJar
+        }
+    }
+    repositories {
+        maven {
+            url "http://nexus.jikeyiyong.com/repository/maven-releases/"
+            credentials {
+                username "maven-uploader"
+                password "jkmavenuploader"
+            }
+        }
+    }
 }
