--- a/wxpay-v3-reactor/build.gradle
+++ b/wxpay-v3-reactor/build.gradle
@@ -1,25 +1,64 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'com.jk.wxpay'
-version '0.0.1-SNAPSHOT'
+version '0.0.1'
 
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+    maven {
+        url "http://nexus.jikeyiyong.com/repository/maven-public/"
+        credentials {
+            username "jk-maven-caller"
+            password "20200223maven"
+        }
+    }
 }
+
 ext {
     junit_version = "4.12"
     slf4j_version = "1.7.30"
     gson_version = "2.8.6"
     reactor_core_version = "3.3.6.RELEASE"
+    sdk_commons_reactor_verison = "0.0.2"
 }
 
 dependencies {
     implementation project(':wxpay-v3-commons')
+    implementation "com.jk.sdk:sdk-commons-reactor:$sdk_commons_reactor_verison"
     implementation "io.projectreactor:reactor-core:$reactor_core_version"
     
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+}
+
+// 上传source
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier = 'sources'
+}
+
+//上传至nexus
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId project.group
+            artifactId project.name
+            version project.version
+            from components.java
+            artifact  sourcesJar
+        }
+    }
+    repositories {
+        maven {
+            url "http://nexus.jikeyiyong.com/repository/maven-releases/"
+            credentials {
+                username "maven-uploader"
+                password "jkmavenuploader"
+            }
+        }
+    }
 }
